<?xml version="1.0"?>
<package>
  <name>dold_meka_interface</name>
  <version>0.0.1</version>
  <description>The dold_meka_interface package</description>

 
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume WALCK</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dold_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>dold_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>m3meka_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
